feat: add native image build profile, SBOM support, and updated documentation
Add a 'native' Maven profile with GraalVM native-maven-plugin and
Spring Boot AOT processing, plus Paketo Buildpacks configuration for
containerized native image builds. Add CycloneDX Maven plugin to
pluginManagement for application-level SBOM generation compatible with
Spring Boot Actuator's /actuator/sbom endpoint. Update README with
comprehensive documentation of all managed dependencies, plugins,
build profiles, native image builds, and SBOM generation.